# Integral

./: CMakeLists.txt
src/: Integral.cpp  Window.hpp  methods.hpp  someFunc.hpp
